# CoralReefPlayer

./: .gitignore  CMakeLists.txt  CoralReefCamCpp.sln  LICENSE  README.md
Android/: settings.gradle
Android/CoralReefPlayer/: build.gradle  consumer-rules.pro  proguard-rules.pro
Android/CoralReefPlayer/src/main/: AndroidManifest.xml
Android/app/: build.gradle
Android/app/src/androidTest/java/cn/oureda/crpdemo/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/cn/oureda/crpdemo/: MainActivity.java  PlayerActivity.java
Android/app/src/main/res/layout/: activity_main.xml  activity_player.xml
Android/app/src/main/res/values/: colors.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/test/java/cn/oureda/crpdemo/: ExampleUnitTest.java
Android/gradle/wrapper/: gradle-wrapper.properties
CoralReefCam/: CMakeLists.txt  CoralReefCam.rc  CoralReefCam.vcxproj  CoralReefCam.vcxproj.filters  Info.plist  StreamPuller.cpp  StreamPuller.h  StreamSink.cpp  StreamSink.h  icon.icns  main.cpp  optparse.h  resource.h
CoralReefPlayer/: AsyncCallback.hpp  CMakeLists.txt  CoralReefPlayer.rc  CoralReefPlayer.vcxproj  CoralReefPlayer.vcxproj.filters  StreamPuller.cpp  StreamPuller.h  StreamSink.cpp  StreamSink.h  VideoDecoder.cpp  VideoDecoder.h  coralreefplayer.h  cpp.hint  dllmain.cpp  resource.h
Harmony/: build-profile.json5  hvigorfile.ts
Harmony/AppScope/: app.json5
Harmony/AppScope/resources/base/element/: string.json
Harmony/CoralReefPlayer/: Index.ets  build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
Harmony/CoralReefPlayer/src/main/: module.json5
Harmony/CoralReefPlayer/src/main/cpp/: CMakeLists.txt
Harmony/CoralReefPlayer/src/main/cpp/types/libcrp_ohos/: Index.d.ts  oh-package.json5
Harmony/CoralReefPlayer/src/main/ets/: Index.ets
Harmony/CoralReefPlayer/src/ohosTest/: module.json5
Harmony/entry/: hvigorfile.ts  oh-package-lock.json5  oh-package.json5
Harmony/entry/src/main/: module.json5
Harmony/entry/src/main/ets/pages/: Index.ets
Harmony/entry/src/main/resources/base/element/: color.json  string.json
binding/: CMakeLists.txt
binding/csharp/: CMakeLists.txt  Directory.Build.props.in  README.md
binding/csharp/CoralReefPlayer/: CoralReefPlayer.cs  CoralReefPlayer.csproj.in  NativeMethods.cs
binding/csharp/CoralReefPlayer.Runtime/: CoralReefPlayer.Runtime.csproj.in
binding/csharp/CoralReefPlayer.Test/: CoralReefPlayer.Test.csproj.in  PullTest.cs
binding/go/: CMakeLists.txt  README.md
binding/go/gcrp/: gcrp.go  gcrp_test.go  go.mod
binding/java/: .gitignore  CMakeLists.txt  README.md  build.gradle  gradle.properties.in  settings.gradle
binding/java/src/main/java/cn/oureda/coralreefplayer/: CoralReefPlayer.java  Frame.java  NativeMethods.java  Option.java
binding/java/src/main/java/cn/oureda/coralreefplayer/util/: LibraryLoader.java
binding/java/src/main/jni/: cn_oureda_coralreefplayer_NativeMethods.cpp  cn_oureda_coralreefplayer_NativeMethods.h
binding/java/src/main/loader/cn/oureda/coralreefplayer/: LibraryLoader.java
binding/java/src/test/java/cn/oureda/coralreefplayer/: PullTest.java
binding/nodejs/: .gitignore  CMakeLists.txt  README.md  binding.gyp.in  package.json.in
binding/nodejs/lib/: index.d.ts  index.js
binding/nodejs/src/: bionic_adapt.cc  main.cc
binding/nodejs/test/: run_tests.js  test_pull.js
binding/python/: CMakeLists.txt  README.md  build_config.py.in  coralreefplayer.py  setup.py  setup.py.in  test.py
binding/python/coralreefplayer/: __init__.py  __init__.pyi
binding/python/src/: main.cpp
binding/python/test/: test_pull.py
binding/rust/: CMakeLists.txt  Cargo.toml.in  README.md  build.rs.in
binding/rust/src/: lib.rs
binding/rust/tests/: test.rs
cmake/: copy_libs.cmake  git-hash.cmake  ios.toolchain.cmake
cmake/toolchains/: aarch64-linux-gnu.toolchain.cmake
ffmpeg/: CMakeLists.txt
ffmpeg/lib/: avdevice.lib  avfilter.lib  avformat.lib  postproc.lib  swscale.lib
iOS/: .gitignore  CMakeLists.txt  build.sh  prebuild.sh
iOS/CoralReefPlayer/: CoralReefPlayer.swift
iOS/CoralReefPlayer.xcodeproj/: project.pbxproj
iOS/CoralReefPlayer.xcodeproj/xcshareddata/xcschemes/: CoralReefPlayer.xcscheme  Example.xcscheme
iOS/Example/: ViewController.swift
iOS/Example/Base.lproj/: Main.storyboard
iOS/Tests/: Tests.swift
imgui/: CMakeLists.txt  imgui.vcxproj  imgui.vcxproj.filters
implot/: CMakeLists.txt
libcurl/lib/: libcurl_imp.lib
libcurl/lib/cmake/CURL/: CURLTargets.cmake
live555/: CMakeLists.txt  Win32.Mak  compile.bat  config.linux-with-shared-libraries  live555.vcxproj  live555.vcxproj.filters
live555/BasicUsageEnvironment/include/: BasicUsageEnvironment_version.hh
live555/UsageEnvironment/include/: UsageEnvironment_version.hh
live555/groupsock/: GroupsockHelper.cpp
live555/groupsock/include/: groupsock_version.hh
live555/liveMedia/: InputFile.cpp  MPEGVideoStreamFramer.cpp  RTSPServer.cpp
live555/liveMedia/include/: liveMedia_version.hh
src/: AsyncCallback.hpp  AudioDecoder.cpp  AudioDecoder.h  CMakeLists.txt  CoralReefPlayer.rc  Info.plist  Matcher.hpp  StreamPuller.cpp  StreamPuller.h  StreamSink.cpp  StreamSink.h  VideoDecoder.cpp  VideoDecoder.h  coralreefplayer.h  coralreefplayer.h.in  dllmain.cpp  version.h.in
test/: CMakeLists.txt
